# px4-sitl-toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: good_first_issue.md  scenario_request.md
.github/workflows/: ci.yml
docs/: contributor-issue-backlog.md  m6-sitl-uart-hybrid.md  maintainer-automation.md  roadmap.md
examples/: crossing-2uav.json  grid-2x3.json  head-on-2uav.json
simulation/: hw_mavlink.py  hw_uart_reader.py  sim_gif_generator.py  util_coords.py  util_udp_relay.py
src/px4_sitl_toolkit/: __init__.py  cli.py  scenarios.py
tests/: test_cli.py  test_scenarios.py
